# carcomm

./: .gitignore  .htaccess  ftp-command.txt  gpxupload-rbxml.rb  gpxupload.rb  openlayers.cfg
579651/: README.txt  people.html  projects.html  time_entries.csv  time_entries.html
579651/C2C low_cost beacon/: messages.html  milestones.html  people.html  time_entries.html  todo_lists.html
579651/C2C low_cost beacon/messages/: 30868504.html  30986337.html  31237148.html  31931729.html  32151822.html  32483570.html  32623592.html  32952781.html  33456316.html  34448661.html
579651/C2C low_cost beacon/milestones/: 14187296.html
579651/C2C low_cost beacon/todo_items/: 54527241.html
579651/C2C low_cost beacon/todo_lists/: 8737226.html  8737253.html  8858776.html  9076554.html  9076574.html  9076601.html  9272910.html
579651/html_exports/: html_exports.css
app/controllers/: application.rb  slices_controller.rb
app/models/: slice.rb
app/views/home/: index.html.erb
app/views/slices/: _form.html.erb  edit.html.erb  index.gpx.builder  index.html.erb  new.html.erb  show.html.erb
carclient/: .gitignore  CMakeLists.txt  GPS_Serial.cpp  GPS_Serial.hpp  Makefile  NMEAParser.cpp  NMEAParser.hpp  PositionWGS84.cpp  PositionWGS84.hpp  carclient.pro  carclient.rb  carmainwindow.cpp  carmainwindow.hpp  carmainwindow.ui  gpslog.rb  gpsreceiver.cpp  gpsreceiver.hpp  main.cpp  mainwindow.ui  mapviewer.cpp  mapviewer.hpp  nmeareplay.cpp  nmeareplay.hpp  ressources.qrc  rubyinstall.txt  slicesender.cpp  slicesender.hpp
carclient/cmake_modules/: FindBoost.cmake
carclient/res/: streetmap.html  test.html
cardroid/: .gitignore  AndroidManifest.xml  build.properties  cmdline.txt
cardroid/res/values/: strings.xml
cardroid/res/values-de/: strings.xml
cardroid/src/de/cstimming/carinfo/: CarinfoActivity.java
cardroid/src/org/andnav/osm/: R.java
config/: database.yml  environment.rb  routes.rb
db/: schema.rb
db/migrate/: 20100329204052_create_slices.rb  20100405150000_addcolumn_slices.rb
doc/: Architekturdoku.odt
gps-tracks/: 2010-04-28-Altona-NMEA.txt  2010-05-03_Hamburg.nmea  testgpx.gpx
jamanalysis/: .project  AndroidManifest.xml
jamanalysis/res/layout/: main.xml
jamanalysis/res/values/: strings.xml  style.xml
jamanalysis/res/values-de/: strings.xml
jamanalysis/src/de/cstimming/jamanalysis/: GpxCharArrayWriter.java  JamAnalysisActivity.java  KonPhiActivity.java  LocationCollector.java  SenderFloatResult.java  SenderInterface.java  Slice.java  SliceSenderResult.java  SliceSenderTask.java
konphidroid/: .project  AndroidManifest.xml
konphidroid-v1/: AndroidManifest.xml
konphidroid-v1/src/org/andnav/osm/: R.java
konphidroid-v1/src/org/andnav/osm/contributor/: OSMUploader.java
konphidroid-v1/src/org/andnav/osm/contributor/util/: RecordedGeoPoint.java  RecordedRouteGPXFormatter.java  Util.java
konphidroid-v1/src/org/andnav/osm/tileprovider/: OpenStreetMapAsyncTileProvider.java
konphidroid-v1/src/org/andnav/osm/views/overlay/: MyLocationOverlay.java  OpenStreetMapViewDirectedLocationOverlay.java  OpenStreetMapViewSimpleLocationOverlay.java
konphidroid/res/layout/: main.xml
konphidroid/res/values/: strings.xml
konphidroid/res/values-de/: strings.xml
konphidroid/src/de/cstimming/konphidroid/: FollowGpsException.java  GpxCharArrayWriter.java  KonPhiActivity.java  LocationCollector.java  SenderFloatResult.java  SenderInterface.java  Slice.java  SliceSenderResult.java  SliceSenderTask.java  Tracker.java
konphidroid/src/org/andnav/osm/contributor/: GpxToPHPUploader.java  OSMUploader.java
konphidroid/src/org/andnav/osm/services/: OpenStreetMapTileProviderService.java
konphidroid/src/org/andnav/osm/views/: OpenStreetMapView.java
konphidroid/src/org/andnav/osm/views/overlay/: MyLocationOverlay.java  OpenStreetMapViewItemizedOverlayControlView.java
konphidroid/src/org/andnav/osm/views/util/: OpenStreetMapTileProviderService.java
konphidroidTest/: .classpath  .project  AndroidManifest.xml
konphidroidTest/res/values/: strings.xml
konphidroidTest/src/de/cstimming/konphidroid/test/: GpxFileTest.java
test-osmview-android/: .classpath
test-osmview-android/src/org/andnav/osm/contributor/: GpxToPHPUploader.java
test-osmview-android/src/org/andnav/osm/contributor/util/constants/: OpenStreetMapContributorConstants.java
test-osmview-android/src/org/andnav/osm/views/: OpenStreetMapView.java
test-osmview-android/src/org/andnav/osm/views/overlay/: OpenStreetMapViewItemizedOverlay.java  OpenStreetMapViewItemizedOverlayControlView.java  OpenStreetMapViewItemizedOverlayWithFocus.java  OpenStreetMapViewOverlayItem.java
test-osmview-android/src/org/andnav/osm/views/util/: OpenStreetMapTileProviderService.java
test/unit/: slice_test.rb
webapp/: .gitignore  Gemfile  Rakefile
webapp/app/controllers/: home_controller.rb  slices_controller.rb
webapp/app/models/: slice.rb
webapp/app/views/home/: index.html.erb
webapp/app/views/layouts/: slices.html.erb
webapp/app/views/slices/: _form.html.erb  index.erb  index.gpx.builder  index.html.erb  new.html.erb  show.html.erb
webapp/config/: application.rb  database.yml  environment.rb  routes.rb
webapp/config/initializers/: secret_token.rb
webapp/db/: schema.rb
webapp/db/migrate/: 20100728201227_add_acc_instance_to_slice.rb  20110320224400_change_latlon_double.rb
webapp/lib/: algo.rb  congest.rb  geo.rb  gpx.rb  nmea.rb  trkpt.rb
webapp/public/: OpenLayers.js  OpenStreetMap.js  csfuncs.js  map.html  streetmap.html  view.html
webapp/public/theme/default/: style.css
webapp/test/fixtures/: slices.yml
webapp/test/functional/: slices_controller_test.rb
webapp/test/unit/: slice_test.rb
